force-app/main/default/objects/BatchLog__c/BatchLog__c.object-meta.xml
<CustomObject>
    <description>Batch 실행 시 Log를 기록</description>
    <label>Batch Log</label>
    <nameField>
        <label>Batch Log 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Log</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>