force-app/main/default/objects/BatchLog__c/fields/cronID__c.field-meta.xml
<CustomField>
    <fullName>cronID__c</fullName>
    <description>BatchableContext.JobId
AsyncApexJob.Id</description>
    <label>cronID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>