force-app/main/default/objects/BatchLog__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>배치 종료 일시</description>
    <label>EndTime</label>
    <type>DateTime</type>
</CustomField>