force-app/main/default/objects/BatchLog__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error Messages</description>
    <label>Error</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>