force-app/main/default/objects/BatchLog__c/fields/guessCnt__c.field-meta.xml
<CustomField>
    <fullName>guessCnt__c</fullName>
    <description>예상 건수</description>
    <label>guessCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>