force-app/main/default/objects/BatchLog__c/fields/guessSize__c.field-meta.xml
<CustomField>
    <fullName>guessSize__c</fullName>
    <description>예상 Process 크기(AsyncApexJob.TotalJobItems)</description>
    <label>guessSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>