force-app/main/default/objects/BatchLog__c/fields/startTime__c.field-meta.xml
<CustomField>
    <fullName>startTime__c</fullName>
    <description>배치 시작 일시</description>
    <label>startTime</label>
    <type>DateTime</type>
</CustomField>