force-app/main/default/objects/BatchLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>상태(AsyncApexJob.Status)</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>