force-app/main/default/objects/BatchLog__c/fields/totalCnt__c.field-meta.xml
<CustomField>
    <fullName>totalCnt__c</fullName>
    <description>전체실행된 Process 건수(AsyncApexJob.JobItemsProcessed)</description>
    <label>totalCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>