force-app/main/default/objects/BatchLog__c/fields/totalSize__c.field-meta.xml
<CustomField>
    <fullName>totalSize__c</fullName>
    <label>totalSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>