force-app/main/default/objects/BatchLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사용자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BatchLogDetails</relationshipName>
    <type>Lookup</type>
</CustomField>