force-app/main/default/objects/BatchLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cronID__c</columns>
    <columns>EndTime__c</columns>
    <columns>Error__c</columns>
    <columns>guessCnt__c</columns>
    <columns>guessSize__c</columns>
    <columns>log__c</columns>
    <columns>startTime__c</columns>
    <columns>Status__c</columns>
    <columns>totalCnt__c</columns>
    <columns>totalSize__c</columns>
    <columns>User__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>