force-app/main/default/objects/BatchLog__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>cronID__c</columns>
    <columns>EndTime__c</columns>
    <columns>Error__c</columns>
    <columns>guessCnt__c</columns>
    <columns>guessSize__c</columns>
    <columns>log__c</columns>
    <columns>startTime__c</columns>
    <columns>Status__c</columns>
    <columns>totalCnt__c</columns>
    <columns>totalSize__c</columns>
    <columns>User__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>김성일</value>
    </filters>
    <label>Today - 김성일</label>
</ListView>